flux/apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        transcode: "true"
      securityContext:
        supplementalGroups:
          - 303 # render group
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.6
          resources:
            requests:
              cpu: 256m
              memory: 981Mi
            limits:
              # memory: 981Mi
          securityContext:
            # Required for hardware acceleration
            privileged: true
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: render-device
              mountPath: /dev/dri/renderD128
              readOnly: true
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: media-shows
              mountPath: /shows
            - name: media-movies
              mountPath: /movies
            - name: media-music
              mountPath: /music
            - name: media-yt
              mountPath: /yt
      volumes:
        - name: render-device
          hostPath:
            path: /dev/dri/renderD128
            type: CharDevice
        - name: jellyfin-config
          nfs:
            server: datasphere
            path: /Root/Volumes/jellyfin/config
        - name: jellyfin-cache
          nfs:
            server: datasphere
            path: /Root/Volumes/jellyfin/cache
        - name: media-shows
          nfs:
            server: datasphere
            path: /Root/Media/Shows
        - name: media-movies
          nfs:
            server: datasphere
            path: /Root/Media/Movies
        - name: media-music
          nfs:
            server: datasphere
            path: /Root/Media/Music
        - name: media-yt
          nfs:
            server: datasphere
            path: /Root/Media/YT
