flux/apps/media/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`jellyfin.home`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.arlodev.co.uk`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.arlodev.co.uk`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
  tls:
    secretName: cert-jellyfin
